--- a/FritoLayAnalysis.Rmd
+++ b/FritoLayAnalysis.Rmd
@@ -27,16 +27,10 @@ library(ggplot2)
 library(aws.s3)
 library(dplyr)
 library(GGally)
-Sys.setenv("AWS_ACCESS_KEY_ID" = "AKIATF2CM7SX6RUXSVBZ",
-           "AWS_SECRET_ACCESS_KEY_ID" = "RQYCFGkfN9gTnIp7pfvz0Id0VXLfoHWLK+HTkwuY",
-           "AWS_DEFAULT_REGION" = "us-east-2")
 
 
-get_bucket("ddsproject1")
-data = s3read_using(FUN = read.csv,
-                          bucket = "ddsproject1",
-                          object = "CaseStudy2-data.csv")
-
+data = read.csv("https://raw.githubusercontent.com/anishkapeter/CaseStudy2DDS/main/data_unclean.csv")
+data = data[2:37]
 ## Make Categorical Variables into factors
 data$Attrition = as.factor(data$Attrition)
 data$Over18 = as.factor(data$Over18)
